new color select html and css

--- a/index.html
+++ b/index.html
@@ -244,14 +244,35 @@
 
             <div class="cc-editor-item">
               <label for=""></label> 
-              <div class="cc-editor-colortab">
-                <div class="cc-editor-colorbox"></div>
-                <div class="cc-editor-colorbox"></div>
-                <div class="cc-editor-colorbox"></div>
-                <div class="cc-editor-colorbox"></div>
-                <div class="cc-editor-colorbox"></div>
-                <div class="cc-editor-colorbox"></div>
+              <div class="cc-editor-colortab-2">
+                <div class="cc-editor-colortab">
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                </div>
 
+                <div class="cc-editor-colortab">
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+
+                </div>
+
+                <div class="cc-editor-colortab">
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+                  <div class="cc-editor-colorbox"></div>
+
+                </div>
               </div>
             </div>
 
