--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="cc-container-editor">
         <div class="cc-editor-menu">
           <div class="cc-editor-menu-item active" onclick="setMode('Textmode', this)">
-            Textmode
+            Morph
           </div>
           <div class="cc-editor-menu-item" onclick="setMode('Evolution', this)">
             Evolution
@@ -37,11 +37,49 @@
 
         <div class="cc-editor-panel">
           <div class="cc-editor-section">
+            <div class="cc-editor-infotext" id="infotext-morph">
+              <div class="cc-editor-head">
+                <h2>Morph</h2>
+              </div>
+              <div class="cc-editor-item cc-editor-infotext-p">
+                <p>
+                  Welcome to morph mode. Type your text and the letters will automatically morph into each other. You can change base parameters like the font and specific ones for the way the letters morph. 
+                  <br> <br>
+                  If you like a certain design, you can grab a still via the "save" button.
+                </p>
+              </div>
+            </div>
+
+            <div class="cc-editor-infotext" id="infotext-evolution">
+              <div class="cc-editor-head">
+                <h2>Evolution</h2>
+              </div>
+              <div class="cc-editor-item cc-editor-infotext-p">
+                <p>
+                  Welcome to evolution mode. You can control the fidelity of the letters via the evolution slider. The higher you set "evolution", the letter will become more accurate. 
+                  <br> <br>
+                </p>
+              </div>
+            </div>
+
+            <div class="cc-editor-infotext" id="infotext-noise">
+              <div class="cc-editor-head">
+                <h2>Noise</h2>
+              </div>
+              <div class="cc-editor-item cc-editor-infotext-p">
+                <p>
+                  Welcome to morph mode. Type your text and the letters will automatically morph into each other. You can change base parameters like the font and specific ones for the way the letters morph. 
+                  <br> <br>
+                  If you like a certain design, you can grab a still via the "save" button.
+                </p>
+              </div>
+            </div>
+
             <div class="cc-editor-head">
               <h2>Text</h2>
             </div>
             <div class="cc-editor-item cc-editor-text">
-              <textarea type="text" rows="4" id="newText">Creative Coding</textarea>
+              <textarea type="text" rows="4" id="newText">Elusive Type</textarea>
             </div>
 
             <div class="cc-editor-head" id="mode-specific-param-head" style="display: none">
@@ -72,6 +110,9 @@
                   <div class="cc-editor-slide-container">
 
                     <!-- Full-width slides/quotes -->
+                    <div class="cc-editor-item-slide-0" style="display: none">
+                      <p>Lato Black</p>
+                    </div>
                     <div class="cc-editor-item-slide-0" style="display: block">
                       <p>Amatic</p>
                     </div>
@@ -83,9 +124,6 @@
                     </div>
                     <div class="cc-editor-item-slide-0" style="display: none">
                       <p>FlowCircular</p>
-                    </div>
-                    <div class="cc-editor-item-slide-0" style="display: none">
-                      <p>Lato Black</p>
                     </div>
                     <div class="cc-editor-item-slide-0" style="display: none">
                       <p>Lato Thin</p>
@@ -143,11 +181,11 @@
 
                   <!-- Full-width slides/quotes -->
                   <div class="cc-editor-item-slide-1" style="display: none">
-                    <p>Left</p>
+                    <p>Center</p>
                   </div>
 
                   <div class="cc-editor-item-slide-1" style="display: none">
-                    <p>Center</p>
+                    <p>Left</p>
                   </div>
 
                   <div class="cc-editor-item-slide-1" style="display: none">
@@ -171,7 +209,7 @@
               </div>
   
               <div class="cc-editor-item">
-                <label for="">Line spacing</label> 
+                <label for="">Paragraph spacing</label> 
                 <div class="cc-editor-slider-container">
                   <ul>
                     <li></li><li></li><li></li><li></li><li></li><li></li><li></li>
@@ -181,12 +219,12 @@
               </div>
 
               <div class="cc-editor-item">
-                <label for="">Line width</label> 
+                <label for="">Outline weight</label> 
                 <div class="cc-editor-slider-container">
                   <ul>
                     <li></li><li></li><li></li><li></li><li></li><li></li><li></li>
                   </ul>
-                  <input type="range" min="0.2" max="30" value="2" step="0.2" class="cc-editor-slider" id="lineWidthSlider">
+                  <input type="range" min="0.2" max="30" value="1" step="0.2" class="cc-editor-slider" id="lineWidthSlider">
                 </div>
               </div>
   
@@ -285,7 +323,7 @@
                 <ul>
                   <li></li><li></li><li></li><li></li><li></li><li></li><li></li>
                 </ul>
-                <input type="range" min="0" max="255" value="100" step="1" class="cc-editor-slider" id="alphaMaxSlider">
+                <input type="range" min="0" max="255" value="170" step="1" class="cc-editor-slider" id="alphaMaxSlider">
               </div>
             </div>  
 
@@ -295,7 +333,7 @@
                 <ul>
                   <li></li><li></li><li></li><li></li><li></li><li></li><li></li>
                 </ul>
-                <input type="range" min="0.5" max="2" value="1" step="0.1" class="cc-editor-slider" id="alphaFadeSlider">
+                <input type="range" min="0.5" max="2" value="0.9" step="0.1" class="cc-editor-slider" id="alphaFadeSlider">
               </div>
             </div>  
 
@@ -305,7 +343,7 @@
                 <ul>
                   <li></li><li></li><li></li><li></li><li></li><li></li><li></li>
                 </ul>
-                <input type="range" min="0.3" max="5" value="4" step="0.1" class="cc-editor-slider" id="lerpGrowthSlider">
+                <input type="range" min="0.3" max="5" value="4.7" step="0.1" class="cc-editor-slider" id="lerpGrowthSlider">
               </div>
             </div>  
 
