Removed "Drawing..." message when starting sketch

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         </div>
 
         <div class="cc-editor-buttons">
-          <div class="cc-editor-button" onclick="showLoadingMessage();setTimeout(startDrawing,15);" id="startButton">
+          <div class="cc-editor-button" onclick="startDrawing();" id="startButton">
             Start
           </div>
           <div class="cc-editor-button" onclick="resetDrawing();" id="resetButton">
