fix for bug where stopping noise and resuming with start button caps the opacity

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
       </div>
 
       <div class="cc-editor-buttons">
-        <div class="cc-editor-button" onclick="randomNoiseSeed = floor(random(10000));startDrawing();" id="startButton">
+        <div class="cc-editor-button" onclick="randomNoiseSeed = floor(random(10000)); targetOpacity = 0;startDrawing();" id="startButton">
           Start
         </div>
         <div class="cc-editor-button" onclick="resetDrawing();" id="resetButton">
